Fix close menu button always visible

--- a/src/scss/structure/_menu.scss
+++ b/src/scss/structure/_menu.scss
@@ -73,4 +73,7 @@
 .menu-close {
     position: absolute;
     margin-top: -50px;
+    @media (min-width: $medium) {
+        display: none;
+    }
 }
